# shared-clipboard

./: .dockerignore  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  README.md  WARP.md  docker-compose.yml  start-client.bat  start-client.sh  start-server.bat  start-server.sh
.github/workflows/: ci.yml  release.yml
client/: Cargo.toml
client/src/: clipboard_manager.rs  config.rs  gui.rs  icon.rs  main.rs  settings.rs  tray.rs  tray_win.rs
client/src/clipboard/: linux.rs  mod.rs  windows.rs
examples/: api-usage.sh  test_rich_text.rs
server/: Cargo.toml
server/src/: main.rs
