[package]
name = "clipboard-client"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
description = "Cross-platform clipboard synchronization client"
homepage.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.0"

# GUI and system tray (commented out for testing)
# egui = "0.28"
# eframe = { version = "0.28", default-features = false, features = [
#     "default_fonts",
#     "glow", 
#     "persistence"
# ] }
# tray-icon = "0.14"
# winit = "0.29"

# Configuration management
toml = "0.8"
dirs = "5.0"

# Platform-specific clipboard dependencies
[target.'cfg(target_os = "linux")'.dependencies]
wl-clipboard-rs = "0.8"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.0"
