[package]
name = "clipboard-client"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
description = "Cross-platform clipboard synchronization client"
homepage.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
tokio-tungstenite = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.0"
dirs = "5"
# Features section removed; eframe is included by default

[dependencies.eframe]
version = "0.28.1"
optional = false
# Use default features so we get a working native stack

default-features = true

# Platform-specific clipboard dependencies
[target.'cfg(target_os = "linux")'.dependencies]
wl-clipboard-rs = "0.8"
ksni = "0.2"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.0"
tray-icon = "0.14"
